crates/zoid-tui/tests/snapshots/shell_snapshot__broken_mode_shows_warn_chip_and_error_card.snap
---
source: crates/zoid-tui/tests/shell_snapshot.rs
expression: "draw(&s, &seeded(), 100, 24)"
---
"v0.1.2                                          zoid          Esc interrupt · : command · ^P palette"
"┌ mode error ─────────────────────────────────────────┐ ╭ ▾ repo ─────────────────────────────────╮ "
"│⚠ mode 'Superpowers' failed to load                  │ │📦 repo   ⎇ main                         │ " Hidden by multi-width symbols: [(58, " ")]
"│Fix its mode.md, then run  :mode reload              │ ╰─────────────────────────────────────────╯ "
"│                                                     │                                             "
"│                                                     │ ╭ ▾ session ──────────────────────────────╮ "
"│                                                     │ │🟢 (unnamed)                             │ " Hidden by multi-width symbols: [(58, " ")]
"│                                                     │ │🤖  ·                                    │ " Hidden by multi-width symbols: [(58, " ")]
"│                                                     │ │⌚ dur 0m   tok/cac 0                    │ " Hidden by multi-width symbols: [(58, " ")]
"│                                                     │ │📊 ctx 0                                 │ " Hidden by multi-width symbols: [(58, " ")]
"│                                                     │ ╰─────────────────────────────────────────╯ "
"│                                                     │                                             "
"│                                                     │ ╭ ▾ context · tokens ─────────────────────╮ "
"│                                                     │ │churn                              cache │ "
"│                                                     │ ╰─────────────────────────────────────────╯ "
"│                                                     │                                             "
"│                                                     │ ╭ ▾ tasks ────────────────────────────────╮ "
"│                                                     │ │no tasks                                 │ "
"│                                                     │ ╰─────────────────────────────────────────╯ "
"└─────────────────────────────────────────────────────┘                                             "
"┌ message ─────────────────────────────────────────────────────────────────────────────────────────┐"
"│                                                                                                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
" ⚠ Superpowers                  ⊟ compact     ● idle      ◐ tool                        zoom normal "
