crates/zoid-tui/tests/snapshots/shell_snapshot__build_placeholder_frame.snap
---
source: crates/zoid-tui/tests/shell_snapshot.rs
assertion_line: 143
expression: "draw(&s, &[], 100, 24)"
---
" zoid  BUILD  ⎇ main                                                                                "
"                                                        ▾ context · tokens  ^5                      "
"  ◐ BUILD mode                                           churn                                      "
"  The autonomous loop arrives in P6.                     [x] evict cold                           0 "
"  ⇧Tab / :chat → back to Chat                                                                       "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                        ▸ files  ^F                                 "
"                                                                                                    "
"                                                        ▸ branch  ^B                                "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"┌ message ─────────────────────────────────────────────────────────────────────────────────────────┐"
"│                                                                                                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
" BUILD  phase —/— · esc → Chat                                                                      "
