crates/zoid-tui/tests/snapshots/shell_snapshot__chat_wide_gutter_frame.snap
---
source: crates/zoid-tui/tests/shell_snapshot.rs
assertion_line: 80
expression: "draw(&s, &seeded(), 140, 24)"
---
" zoid  CHAT  ⎇ main                                                                                                                         "
"› what's causing the 500?                                                                       ▾ context · tokens  ^5                      "
"zoid an unwrapped lookup in the handler.                                                         churn                                      "
"                                                                                                 [x] evict cold                           0 "
"                                                                                                                                            "
"                                                                                                                                            "
"                                                                                                                                            "
"                                                                                                                                            "
"                                                                                                                                            "
"                                                                                                ▸ files  ^F                                 "
"                                                                                                                                            "
"                                                                                                ▸ branch  ^B                                "
"                                                                                                                                            "
"                                                                                                                                            "
"                                                                                                                                            "
"                                                                                                                                            "
"                                                                                                                                            "
"                                                                                                                                            "
"                                                                                                                                            "
"                                                                                                                                            "
"┌ message ─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│                                                                                                                                          │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
" CHAT  ⎇ main · zoom normal · ^P palette · ⇧Tab → Build · ^C quit                                                                           "
