crates/zoid-tui/tests/snapshots/shell_snapshot__chat_with_rail_frame.snap
---
source: crates/zoid-tui/tests/shell_snapshot.rs
expression: "draw(&s, &seeded(), 100, 24)"
---
" zoid  CHAT  ⎇ main                                                                                 "
"00:00 › what's causing the 500?                         ▾ context · tokens                          "
"00:00 zoid an unwrapped lookup in the handler.           churn                                      "
"                                                         [x] evict cold                           0 "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                        ▸ files                                     "
"                                                                                                    "
"                                                        ▸ branch                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"┌ message ─────────────────────────────────────────────────────────────────────────────────────────┐"
"│                                                                                                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
" CHAT  ⎇ main · zoom normal · ^P palette · ⇧Tab → Build · ^C quit                                   "
