crates/zoid-tui/tests/snapshots/shell_snapshot__config_key_prompt_masks_entry.snap
---
source: crates/zoid-tui/tests/shell_snapshot.rs
expression: snapshot
---
"╭ zoid · settings ─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮"
"│ ▸ Provider & Model                                                                                                                                           │"
"│   Economy             Enter ANTHROPIC_API_KEY                                                                                                                │"
"│   Interface             •••••••••▌                                                                                                                           │"
"│   Secrets                                                                                                                                                    │"
"│                         Enter save · Esc cancel                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│ Tab section · Up/Down move · Enter drill · Esc back                                                                                                          │"
"╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
