crates/zoid-tui/tests/snapshots/shell_snapshot__config_overlay_frame.snap
---
source: crates/zoid-tui/tests/shell_snapshot.rs
expression: "draw_config(&s, &sections, 100, 24)"
---
"╭ zoid · settings ─────────────────────────────────────────────────────────────────────────────────╮"
"│ ▸ Provider & Model    ▸ provider      ollama                                            [default]│"
"│   Economy               model                                                             [env] ⚠│"
"│   Interface             base_url                                                        [default]│"
"│   Secrets                                                                                        │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│ Tab section · Up/Down move · Enter drill · Esc back                                              │"
"╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
