crates/zoid-tui/tests/snapshots/shell_snapshot__config_overlay_narrow_degrades.snap
---
source: crates/zoid-tui/tests/shell_snapshot.rs
assertion_line: 1090
expression: "draw_config(&s, &sections, 80, 24)"
---
"╭ zoid · settings ─────────────────────────────────────────────────────────────╮"
"│ ▸ Provider & Model      provider    ollama                          [default]│"
"│   Economy               model                                       [default]│"
"│   Interface             base_url                                    [default]│"
"│   Secrets                                                                    │"
"│                       ╭────────────────────────────────────────────────────╮ │"
"│                       │   ollama · local  http  http://localhost:11434     │ │"
"│                       │ ▸ ollama · cloud  http  https://ollama.com         │ │"
"│                       │   opencode · go  http  https://opencode.ai/zen/go  │ │"
"│                       │   anthropic · api key  http  https://api.anthropi… │ │"
"│                       │   anthropic · Claude Code CLI  cli  claude  plann… │ │"
"│                       │   anthropic · SDK  sdk  —  planned                 │ │"
"│                       ╰────────────────────────────────────────────────────╯ │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│ Tab section · Up/Down move · Enter drill · Esc back                          │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
