crates/zoid-tui/tests/snapshots/shell_snapshot__config_overlay_provider_picker.snap
---
source: crates/zoid-tui/tests/shell_snapshot.rs
expression: "draw_config(&s, &sections, 160, 40)"
---
"╭ zoid · settings ─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮"
"│ ▸ Provider & Model      provider      ollama        [default]   ollama · local  http  http://localhost:11434                                                 │"
"│   Economy               model                       [default] ▸ ollama · cloud  http  https://ollama.com                                                     │"
"│   Interface             base_url                    [default]   opencode · go  http  https://opencode.ai/zen/go                                              │"
"│   Secrets               thinking      off           [default]   anthropic · api key  http  https://api.anthropic.com                                         │"
"│                         effort        (auto)        [default]   zai · coding plan  http  https://api.z.ai/api/coding/paas/v4                                 │"
"│                                                                 opencode · zen  http  https://opencode.ai/zen                                                │"
"│                                                                 gemini · api key  http  https://generativelanguage.googleapis.com                            │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│ Tab section · Up/Down move · Enter drill · Esc back                                                                                                          │"
"╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
